--- a/index.html
+++ b/index.html
@@ -9,18 +9,16 @@
     <title>Deegeelab - Your Digital Marketing Specialist in Australia</title>
     <link href="assets/Logo/DeegeelabWhite.png" rel="icon">
     <link href="assets/fonts/flaticon.css" rel="stylesheet" type="text/css">
-    <link href="assets/fonts/fontawesome/web-fonts-with-css/css/fontawesome-all.min.css" rel="stylesheet" type="text/css">
     <link href="assets/css/materialize.min.css" rel="stylesheet" type="text/css">
+    <link href="assets/css/navbar.css" rel="stylesheet" type="text/css">
     <link href="assets/css/responsive.css" rel="stylesheet" type="text/css">
-    <link href="assets/css/style.css" rel="stylesheet" type="text/css">
     <link href="assets/css/animate.css" rel="stylesheet" type="text/css">
     <link href="assets/css/svg.css" rel="stylesheet" type="text/css">
     <link href="assets/css/pillar.css" rel="stylesheet" type="text/css">
     <link href="assets/css/socialfloat.css" rel="stylesheet" type="text/css">
-    <link href="assets/css/navbar.css" rel="stylesheet" type="text/css">
+    <link href="assets/css/style.css" rel="stylesheet" type="text/css">
 </head>
-<body>    
-    
+<body>
     <div><!-- Floating Social Media bar Starts -->
         <div class="fl-fl float-fb">
             <i class="fab fa-facebook fa-2x"></i>
@@ -472,6 +470,10 @@
         <div class="section col s12 Contactbg1"><!-- contact us -->
             <div class="layer wrapper" data-depth="0.3">
                 <!-- desktop -->
+
+
+
+
                 <div class="hide-on-med-only hide-on-small-only" id='display_desktop'>
                     <div class="col s12" style="margin-right: 50px;margin-left: 50px">
                         <div class="card horizontal">
@@ -499,30 +501,41 @@
                                     <form id="form_query" method="po st" name="form_query">
                                         <div class="row">
                                             <div class="input-field col s12">
-                                                <input class="validate" id="field_name" name="field_name" style="color: black !important;" type="text"> <label for="field_name">Name</label>
+                                                <input class="validate" id="field_name" name="field_name" type="text"> 
+                                                <label for="field_name">Name</label>
                                             </div>
                                             <div class="input-field col s12">
-                                                <input class="validate" id="field_business" name="field_business" style="color: black !important;" type="text"> <label for="field_business">Business Name</label>
-                                            </div>
-                                        </div>
-                                        <div class="row">
-                                            <div class="input-field col s12">
-                                                <input class="validate" id="field_conemail" name="field_conemail" style="color: black !important;" type="email"> <label for="field_conemail">Contact Email</label>
+                                                <input class="validate" id="field_business" name="field_business" type="text"> 
+                                                <label for="field_business">Business Name</label>
                                             </div>
                                         </div>
                                         <div class="row">
                                             <div class="input-field col s12">
-                                                <input class="validate" id="field_connumber" name="field_connumber" style="color: black !important;" type="number"> <label for="field_email">Contact Number</label>
+                                                <input class="validate" id="field_email" name="field_email" type="email"> 
+                                                <label for="field_email">Contact Email</label>
                                             </div>
                                         </div>
                                         <div class="row">
                                             <div class="input-field col s12">
-                                                <input class="validate" id="field_date" name="field_message" style="color: black !important;" type="text"> <label for="field_date">Message</label>
+                                                <input class="validate" id="field_number" name="field_number" type="number"> 
+                                                <label for="field_email">Contact Number</label>
+                                            </div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="input-field col s12">
+                                                <input id='field_dateFrom' type='date' id="field_date" name='field_date'>
+                                                <label for="field_date">Schedule a meeting</label>
+                                            </div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="input-field col s12">
+                                                <textarea class="validate" id="field_message" name="field_message" type="text"></textarea>
+                                                <label for="field_date">Message</label>
                                             </div>
                                         </div>
                                         <div class="row">
                                             <div class="col s12">
-                                                <button class="rnr-button waves-effect waves-light" style="color: black !important;">Send</button>
+                                                <button class="rnr-button waves-effect waves-light">Send</button>
                                             </div>
                                         </div>
                                     </form>
@@ -532,7 +545,7 @@
                     </div>
                 </div>
                 <!-- tablet -->
-                <div class="hide-on-small-only hide-on-large-only" id='display_tablet'>
+                <!-- <div class="hide-on-small-only hide-on-large-only" id='display_tablet'>
                     <div class="col s12" style="margin-right: 50px;margin-left: 50px">
                         <div class="card horizontal">
                             <div class="card-image" id='backcon'>
@@ -590,9 +603,9 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <!-- mobile -->
-                <div class="hide-on-med-only hide-on-large-only" id='display_mobile'>
+                <!-- <div class="hide-on-med-only hide-on-large-only" id='display_mobile'>
                     <div class="card">
                         <div class="row">
                             <div class="col s12 m8 l8" style="border-left: black solid 0.5px;">
@@ -627,29 +640,21 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
-    <!-- JAVASCRIPTS -->
     <script src="assets/js/jquery.min.js"></script> 
     <script src="assets/js/jquery.easings.min.js"></script> 
     <script src="assets/js/jquery.sidr.min.js"></script>
-    <script src="assets/js/scrolloverflow.min.js"></script> 
     <script src="assets/js/jquery.fullPage.js"></script> 
     <script src="assets/js/jquery.fullpage.extensions.min.js"></script> 
     <script src="assets/js/materialize.min.js"></script> 
     <script src="assets/js/validation/jquery.validate.min.js"></script> 
     <script src="assets/js/validation/additional-methods.min.js"></script> 
-    <script src="assets/js/system.js"></script> 
-    <script src="assets/js/scripts.js"></script> 
-    <script src="assets/js/parallax.min.js"></script> 
-    <script src="assets/js/jquery.backgroundMove.js"></script>
+    <script src="assets/js/scrolloverflow.min.js"></script> 
     <script src="assets/js/pillar.js"></script>
-    <script src="assets/js/navbar.js"></script>
-<script>
-    
-</script>
-
+    <script src="assets/js/system.js"></script>
+    <script src="assets/js/scripts.js"></script>
 </body>
 </html>
